syntax = "proto3";

package api.proc;

option go_package = ".;api";

service ChatService {
  rpc GetChat(GetChatRequest) returns (Chat) {}
}

message Chat {}

message GetChatRequest {
  oneof chat {
    string id = 1;
    string name = 2;
  }
}